--- a/pingtest.yml
+++ b/pingtest.yml
@@ -1,4 +1,11 @@
-- hosts:
-    - all
+---
+- hosts: lin
+  become: no
+  gather_facts: no
   tasks:
-    - action: ping
+  - name: "Execute command!"
+    command: whoami
+    register: who
+  - name: "Result"
+    debug:
+      msg: "{{who}}"
